# RMUA-SIM

./: .gitignore  RMU-SIM.webm  easy_install.sh  readme.md
rmua_common/: CMakeLists.txt  package.xml
rmua_common/include/: dbg.h  helper.h  ros_headers.h
rmua_common/include/math/: aabox2d.h  box2d.h  line_segment2d.h  math_utils.h  polygon2d.h  pose.h  vec2d.h
rmua_common/include/visualization/: axis_picture.h  visualization.h
rmua_common/src/: helper.cpp
rmua_common/src/math/: aabox2d.cpp  box2d.cpp  line_segment2d.cpp  math_utils.cpp  polygon2d.cpp  vec2d.cpp
rmua_common/src/visualization/: axis_picture.cpp  visualization.cpp
rmua_planning/: CMakeLists.txt  package.xml
rmua_planning/include/: a_star_planner.h  nlp_planner.h  path_smoother.h  speed_optimizer.h
rmua_planning/include/teb_local_planner/: obstacles.h  planner_interface.h  pose_se2.h  robot_footprint_model.h  teb_config.h  teb_planner.h  timed_elastic_band.h
rmua_planning/include/teb_local_planner/g2o_types/: base_teb_edges.h  edge_acceleration.h  edge_dynamic_obstacle.h  edge_kinematics.h  edge_obstacle.h  edge_prefer_rotdir.h  edge_shortest_path.h  edge_time_optimal.h  edge_velocity.h  edge_velocity_obstacle_ratio.h  edge_via_point.h  edge_via_pose.h
rmua_planning/log/: planning_node.ERROR  planning_node.INFO  planning_node.WARNING  planning_node.zmw.zmw.log.ERROR.20220531-094440.32156  planning_node.zmw.zmw.log.INFO.20220531-093639.28245  planning_node.zmw.zmw.log.INFO.20220531-094405.32156  planning_node.zmw.zmw.log.WARNING.20220531-093650.28245  planning_node.zmw.zmw.log.WARNING.20220531-094440.32156
rmua_planning/scripts/: visualize.py
rmua_planning/src/: a_star_planner.cpp  nlp_planner.cpp  path_smoother.cpp  planning_node.cpp  speed_optimizer.cpp
rmua_planning/src/teb_local_planner/: obstacles.cpp  teb_config.cpp  teb_planner.cpp  timed_elastic_band.cpp
rmua_simulator/: CMakeLists.txt  package.xml  simulation.sh
rmua_simulator/config/: params.yaml
rmua_simulator/include/: chassis_kinematic.h  gimbal_kinematic.h
rmua_simulator/launch/: sim.launch
rmua_simulator/map/: map.yaml
rmua_simulator/rviz/: rviz.rviz
rmua_simulator/scripts/: console.py
rmua_simulator/src/: chassis_kinematic.cpp  gimbal_kinematic.cpp  map_manager.cpp  simulator.cpp
